# genesis

./: README.md  pyproject.toml
.github/: CODEOWNERS
.github/workflows/: ci.yml
scripts/: setup.sh
src/mansa/: __init__.py  __main__.py  cli.py
src/mansa/lexer/: __init__.py  scanner.py  stream.py  token.py
tests/: __init__.py
tests/unit/: __init__.py
tests/unit/lexer/: test_scanner.py  test_stream.py  test_token.py
