[project]
name = "mansa"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Rufai Limantawa", email = "rufailimantawa@gmail.com" }
]
requires-python = ">=3.13"

[project.scripts]
mansa = "mansa.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "mypy>=1.18.2",
    "pytest>=9.0.1",
    "ruff>=0.14.6",
]
